<?xml version="1.0"?>
<package format="2">

  <name>generic_type_support</name>
  <version>0.0.0</version>
  <description>The generic_type_support package</description>
  <maintainer email="isamu.takagi@tier4.jp">Takagi, Isamu</maintainer>
  <license>Apache License 2.0</license>

  <buildtool_depend>ament_cmake_auto</buildtool_depend>

  <depend>rclcpp</depend>
  <depend>yaml_cpp_vendor</depend>

  <test_depend>ament_cmake_gtest</test_depend>
  <test_depend>ament_lint_auto</test_depend>
  <!-- <test_depend>ament_lint_common</test_depend> -->

  <export>
    <build_type>ament_cmake</build_type>
  </export>

</package>
