<?xml version="1.0"?>
<package format="2">

  <name>multi_data_monitor</name>
  <version>0.0.0</version>
  <description>The multi_data_monitor package</description>
  <maintainer email="isamu.takagi@tier4.jp">Takagi, Isamu</maintainer>
  <license>Apache License 2.0</license>

  <buildtool_depend>ament_cmake_auto</buildtool_depend>

  <depend>libqt5-core</depend>
  <depend>libqt5-gui</depend>
  <depend>libqt5-widgets</depend>
  <depend>qtbase5-dev</depend>
  <depend>yaml-cpp</depend>
  <depend>ament_index_cpp</depend>
  <depend>rclcpp</depend>
  <depend>rviz_common</depend>
  <depend>generic_type_support</depend>

  <test_depend>ament_lint_auto</test_depend>
  <test_depend>ament_lint_common</test_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>

</package>
